# moodlequiz

./: .pre-commit-config.yaml  LICENCE  README.md  example.py  example.tex  moodlequiz.py  pyproject.toml
moodlequiz/: __init__.py  quiz.py  utils.py
moodlequiz/question/: __init__.py  category.py  coderunner.py  essay.py  multichoice.py  question.py
moodlequiz/question/coderunner/: __init__.py  coderunner.py  templatetools.py
